
    HDFS-11078. Fix NPE in LazyPersistFileScrubber. (Inigo Goiri via shv)

    HDFS-11893. Fix TestDFSShell.testMoveWithTargetPortEmpty failure.
    (Contributed by Brahma Reddy Battula)

    HDFS-5042. Completed files lost after power failure. (vinayakumarb via kihwal)

    HDFS-11856. Ability to re-add upgrading nodes to pipeline for future
    pipeline updates. (vinayakumarb via kihwal)

Release 2.7.3 - 2016-08-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8647. Abstract BlockManager's rack policy into BlockPlacementPolicy.
    (Brahma Reddy Battula via mingma)

    HDFS-7163. WebHdfsFileSystem should retry reads according to the configured
    retry policy. (Eric Payne via kihwal)

    HDFS-9047. Retire libwebhdfs (kihwal)

    HDFS-9569. Log the name of the fsimage being loaded for better
    supportability. (Yongjun Zhang)

    HDFS-9415. Document dfs.cluster.administrators and
    dfs.permissions.superusergroup. (Xiaobing Zhou via Arpit Agarwal)

    HDFS-9634. webhdfs client side exceptions don't provide enough details
    (Eric Payne via kihwal)

    HDFS-9654. Code refactoring for HDFS-8578.  (szetszwo)

    HDFS-9669. TcpPeerServer should respect ipc.server.listen.queue.size
    (Elliot Clark via cmccabe)

    HDFS-4946. Allow preferLocalNode in BlockPlacementPolicyDefault to be
    configurable (James Kinley and Nathan Roberts via kihwal)

    HDFS-8578. On upgrade, Datanode should process all storage/data dirs in
    parallel.  (vinayakumarb and szetszwo via szetszwo)

    HDFS-9048. DistCp documentation is out-of-dated
    (Daisuke Kobayashi via iwasakims)

    HDFS-9860. Backport HDFS-9638 to branch-2.7. (Wei-Chiu Chuang via aajisaka)

    HDFS-8101. DFSClient use of non-constant DFSConfigKeys pulls in WebHDFS
    classes at runtime. (Sean Busbey via atm)

    HDFS-8772. Fix TestStandbyIsHot#testDatanodeRestarts which occasionally fails.
    (Walter Su via wang).
